feat: 🎸 add BaseResponseDto
